--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
-                <div class="col-md-4 col-xl-2 mt-4 text-nowrap">
-                    <a role="button" class="btn btn-lg btn-info" href="#reserveForm">Reserve Campsite</a>
+                <div class="col-md-4 col-xl-2 mt-4">
+                    <a role="button" class="btn btn-lg btn-info text-nowrap" href="#reserveForm">Reserve Campsite</a>
                 </div>
             </div> 
         </div>
