--- a/contactus.html
+++ b/contactus.html
@@ -39,7 +39,7 @@
 
     <nav role="navigation" class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" alt="nucamp logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
