--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <!--Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     
-    
     <!--Additional CSS must be placed after Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
@@ -41,12 +40,13 @@
 
     <!--Reserve campsite modal-->
     <div id="reserveModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-dialog modal-lg" role="document" tabindex="0">
             <div class="modal-content">
                 <div class="modal-header bg-info text-white">
                     <h3 class="modal-title">Reserve a Campsite</h3>
                     <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
                     <div class="container-fluid">
@@ -74,7 +74,7 @@
                                     </div>    
                                 </div>
                                 <div class="row form-group">
-                                    <label class="col-sm-6 col-form-label">Campsite Type</label>
+                                    <label for="siteTent" class="col-sm-6 col-form-label">Campsite Type</label>
                                     <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
                                         <label class="btn btn-success active">
                                             <input type="radio" name="siteType" id="siteTent" autocomplete="off" checked> Tent
@@ -129,6 +129,7 @@
                     <h3 class="modal-title">Login</h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
                     <div class="container-fluid">
@@ -204,7 +205,10 @@
                         <a class="carousel-control-next" href="#homeCarousel" role="button" data-slide="next">
                             <span class="carousel-control-next-icon"></span>
                             <span class="sr-only">Next</span>
-                        </a>    
+                        </a>
+                        <button class="btn btn-danger btn-red" id="carouselButton">
+                            <i class="fa fa-pause"></i>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -290,6 +294,22 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script>
+        $(function() {
+            $(".carousel").carousel( { interval: 2000 } );
+            $("#carouselButton").click(function(){
+                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
+                    $(".carousel").carousel("pause");
+                    $("#carouselButton").children("i").removeClass("fa-pause");
+                    $("#carouselButton").children("i").addClass("fa-play");
+                } else {
+                    $(".carousel").carousel("cycle");
+                    $("#carouselButton").children("i").removeClass("fa-play");
+                    $("#carouselButton").children("i").addClass("fa-pause");
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
