--- a/aboutus.html
+++ b/aboutus.html
@@ -8,20 +8,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!--Bootstrap CSS-->
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-
-    <!--Additional CSS must be placed after Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster|Open+Sans">
     <link rel="stylesheet" href="css/styles.css">
+    <!-- endbuild -->
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster|Open+Sans">
     
 </head>
 
 <body>
-    <a role="button" href="#main">Skip to Main</a>
+    <a class="sr-only" role="button" href="#main">Skip to Main</a>
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
@@ -229,9 +228,11 @@
         </div>
     </footer>
 
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- endbuild -->
 
 </body>
 
